--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
+      type="image/png"
+      href="/src/assets/images/favicon-amandisfrut.png"
     />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>React - AmandisFrut</title>
+    <title>AmandisFrut</title>
     <!-- Font Awesome -->
     <script
       src="https://kit.fontawesome.com/f5bdbb41e0.js"
